--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -26,21 +26,20 @@
  display: flex;
  flex-direction: column;
  animation: fadeInUp 0.6s ease forwards;
+ height: fit-content;
 }
 
 .about-title {
  display: block;
  max-width: fit-content;
- font-size: 3rem;
+ font-size: 2.5rem;
  font-weight: 700;
  color: #111827;
  margin-bottom: 0.5rem;
  padding: 0.2rem;
- line-height: 1.2;
- letter-spacing: 0.1em;
+
  overflow: hidden;
  white-space: nowrap;
- border-right: 0.15em solid white;
 }
 
 .dark .about-title {
