--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -27,6 +27,7 @@
 .header-nav {
  display: flex;
  gap: 2rem;
+ margin-left: 1rem;
 }
 
 .nav-link {
@@ -39,6 +40,7 @@
  transition: color 0.2s ease;
  padding: 0.5rem 0;
  position: relative;
+ text-wrap: nowrap;
 }
 
 .dark .nav-link {
@@ -97,11 +99,6 @@
  /* color: #374151; */
  cursor: pointer;
  transition: all 0.2s ease;
-}
-
-.switch {
- /* border: 1px solid #d1d5db;
-  border-radius: 50%; */
 }
 
 .dark .icon-link,
