--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,10 +1,13 @@
 @import 'variables.css';
 
 .skills__section {
- /* min-height: 100vh; */
+ /* min-height: 100vh;
+ max-height: 110vh; */
  display: flex;
+ display: flex;
+ flex-direction: column;
  align-items: center;
- padding: 6rem 5rem;
+ /* padding: 6rem 5rem; */
  background: var(--gradient-bg-primary);
  transition: background-color 0.3s ease;
  position: relative;
@@ -14,11 +17,12 @@
 
 .skills__container {
  max-width: 1280px;
+
  margin: 0 auto;
  width: 100%;
  height: 100;
  z-index: 6;
- margin: auto 5rem;
+ margin: 4rem 2rem 4rem 4rem;
 }
 
 .skills__title {
@@ -29,48 +33,93 @@
  margin-bottom: 1rem;
 }
 
-.skills__subtitle {
- font-size: 1.75rem;
- text-align: center;
- font-weight: 700;
- color: var(--color-primary);
- margin-bottom: 4rem;
-}
-
-.skills__grid {
+.skills__description {
  display: grid;
  grid-template-columns: 1fr 1fr;
- gap: 1rem;
- align-items: center;
- margin-top: 3rem;
-}
 
-.skills__description {
- display: flex;
- flex-direction: column;
- gap: 1.5rem;
+ gap: 3rem;
  color: var(--color-primary);
  font-size: 1rem;
- padding-left: 30%;
+ align-items: flex-start;
+ margin-bottom: auto;
+ padding: 5rem 2rem;
 }
 
-.skills__list {
- font-size: 1.5rem;
+.skills__subtitle {
+ font-size: 2rem;
+ font-weight: 700;
+ color: var(--color-primary);
+ margin-bottom: 0.5rem;
 }
 
 .skills__text {
- font-size: 1.05rem;
+}
+
+.skills__points {
+ display: grid;
+ grid-template-columns: 1fr 1fr;
+ gap: 0.5rem;
+ svg {
+  width: 32px;
+  height: 32px;
+ }
+}
+.skills__point {
+ position: relative;
+ color: var(--color-primary);
+ display: flex;
+ padding: 0.8rem;
+ border-radius: 10px;
+ gap: 1rem;
+ font-size: 20px;
+ background: var(--gradient-bg-primary);
+ svg {
+  width: 42px;
+  height: 42px;
+  z-index: 1;
+ }
+}
+
+/* .skills__point:nth-child(1):before {
+ content: '';
+ position: absolute;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ top: 0;
+
+ background-color: #e07278;
+ transition: width 0.3s ease;
+ z-index: 0;
+} */
+
+/* .skills__grid {
+ display: grid;
+ grid-template-columns: 1fr 1fr;
+ gap: 2rem;
+ align-items: center;
+ margin-top: 3rem;
+} */
+
+/* 
+.skills__text {
+ font-size: 2.05rem;
 
  line-height: 1.8;
-}
+} */
 
 .skills__orbit-container {
  position: relative;
+ /* max-width: 100vh; */
+ min-height: 100vh;
  width: 100%;
- height: 500px;
+ /* min-height: 80vh;
+ height: 100%;  */
+
  display: flex;
  align-items: center;
  justify-content: center;
+ margin: 1rem;
 }
 
 .orbit-center {
@@ -111,12 +160,17 @@
  left: 50%;
  width: 0;
  height: 0;
+ z-index: 7;
 }
 
 .orbit-item {
  position: absolute;
  top: 0;
  left: 0;
+}
+.orbit-item:hover {
+ /* animation-play-state: paused; */
+ animation-duration: 99;
 }
 
 .skill-icon {
@@ -129,7 +183,7 @@
  flex-direction: column;
  align-items: center;
  justify-content: center;
- color: #0ea5e9;
+ /* color: #0ea5e9; */
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease;
  cursor: pointer;
@@ -138,16 +192,18 @@
  img {
   width: 50px;
   height: 50px;
-  border-radius: 5px;
+  border-radius: 10px;
  }
 }
 
 .skill-icon:hover {
- background: linear-gradient(135deg, #0ea5e9, #3b82f6);
- color: white;
+ /* background: var(--gradient-item-primary); */
+ background: none;
+ color: var(--color-item-primary);
  box-shadow: 0 8px 20px rgba(14, 165, 233, 0.4);
  transform: translate(-50%, -50%) scale(1.2);
- animation-play-state: paused;
+
+ backdrop-filter: blur(210px);
 }
 
 .skill-name {
@@ -157,7 +213,7 @@
  transform: translateX(-50%);
  font-size: 0.75rem;
  font-weight: 600;
- color: #374151;
+ color: var(--color-primary);
  white-space: nowrap;
  opacity: 0;
  transition: opacity 0.3s ease;
@@ -178,17 +234,6 @@
  }
 }
 
-/* .skill__name {
- font-size: 2rem;
- font-weight: 600;
- text-align: center;
- color: #374151;
-}
-
-.dark .skill__name {
- color: #e5e7eb;
-} */
-
 @keyframes fadeInUp {
  from {
   opacity: 0;
@@ -200,11 +245,17 @@
  }
 }
 
+@media (max-width: 1064px) {
+ /* .skills__description {
+  position: absolute;
+ } */
+}
+
 @media (max-width: 768px) {
- .skills__grid {
+ /* .skills__grid {
   grid-template-columns: 1fr;
   gap: 3rem;
- }
+ } */
 
  .skills__orbit-container {
   height: 450px;
