--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@
  top: 0;
  left: 0;
  right: 0;
- z-index: 7;
+ z-index: 8;
  background-color: var(--color-bg-primary);
  backdrop-filter: blur(10px);
  border-bottom: 1px solid var(--color-border-primary);
@@ -28,6 +28,7 @@
 }
 
 .nav-link {
+ font-family: 'Bebas Neue';
  background: none;
  border: none;
  color: #374151;
