--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,8 +10,14 @@ html {
 
 body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif,
+  'Bebas Neue';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+@font-face {
+ font-family: 'Bebas Neue';
+ src: url(../fonts/Bebas_Neue/BebasNeue-Regular.ttf);
 }
