--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -280,6 +280,7 @@
   width: 100%;
   max-width: 400px;
   margin-bottom: 5rem;
+  transform: scale(-70%) rotate(180deg);
  }
  /* 
  .center-circle {
