--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,7 +6,7 @@
  display: flex;
  align-items: center;
  /* padding: 6rem 2rem 4rem; */
- background: var(--gradient-bg-third);
+ background: var(--gradient-bg-primary);
  transition: background 0.5s ease;
  display: flex;
  flex-direction: column;
