(fix):update description text

--- a/src/styles/Intro.css
+++ b/src/styles/Intro.css
@@ -1,4 +1,5 @@
 @import 'variables.css';
+@import 'animations.css';
 .intro__section {
  position: relative;
  min-height: 100vh;
@@ -7,16 +8,18 @@
  align-items: center;
  justify-content: center;
  flex-direction: column;
- gap: 8rem;
+ gap: 3rem;
 }
 
 .intro__text {
  position: relative;
  display: flex;
+ flex-direction: column;
  width: 100%;
  align-items: center;
  justify-content: center;
- animation: fadeInUp 2s ease forwards;
+ z-index: 7;
+ animation: fadeInDown 2s ease forwards;
 }
 
 .intro__title {
@@ -24,12 +27,12 @@
  color: var(--color-secondary);
  font-size: 2rem;
  text-align: center;
- position: absolute;
- transform: translateX(-50%);
+
  z-index: 2;
 }
 
 .intro__highlight {
+ font-family: 'Bebas Neue';
  font-size: 5rem;
  text-wrap: nowrap;
  background: var(--gradient-item-primary);
