--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,5 +1,3 @@
-@import 'variables.css';
-
 .skills__section {
  min-height: 100vh;
  background: var(--gradient-bg-secondary);
@@ -204,7 +202,7 @@
  }
 }
 
-@keyframes fadeInUp {
+/* @keyframes fadeInUp {
  from {
   opacity: 0;
   transform: translateY(30px);
@@ -213,7 +211,7 @@
   opacity: 1;
   transform: translateY(0);
  }
-}
+} */
 
 @media (max-width: 1064px) {
  .skills__container {
